syntax = "proto3";

package auth;

service AuthService {
    rpc Signin (SigninDto) returns (TokenResponse) {}
    rpc Signup (SignupDto) returns (TokenResponse) {}
    rpc Validate (ValidateDto) returns (UserResponse) {}
}

message TokenResponse {
    oneof response {
        Token token = 1;
        ErrorMessage error = 2;
    }
}

message UserResponse {
    oneof response {
        User user = 1;
        ErrorMessage error = 2;
    }
}

message Token {
    optional string accessToken = 1;
    optional string refreshToken = 2;
}

message User {
    optional string username = 1;
    optional string user_id = 2;
}

message SigninDto {
    string username = 1;
    string user_id = 2;
}

message SignupDto {
    string username = 1;
    string password = 2;
    string email = 3;
}

message ValidateDto {
    string username = 1;
    string password = 2;
}

message ErrorMessage {
    string message = 1;
    string error = 2;
    int32 statusCode = 3;
}